--- a/Web_part/templates/index.html
+++ b/Web_part/templates/index.html
@@ -12,7 +12,7 @@
 
 
     <!-- external css -->
-    <link rel="stylesheet" href='/static/style.css' />
+    <link rel="stylesheet" href='/Web_part/static/style.css' />
 
 
 </head>
