--- a/Web_part/templates/indexi.html
+++ b/Web_part/templates/indexi.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- external css -->
-    <link rel="stylesheet" href='/static/style.css' />
+    <link rel="stylesheet" href='/Web_part/static/style.css' />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     
