--- a/Web_part/templates/home.html
+++ b/Web_part/templates/home.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- external css -->
-    <link rel="stylesheet" href='/static/sstyle.css' />
+    <link rel="stylesheet" href='/static/style.css' />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 
@@ -304,7 +304,7 @@
 
     <!-- Add Js  Bootstrap-->
 
-    <script src="/static/scripts.js" async defer></script>
+    <script src="/static/script.js" async defer></script>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
