--- a/Web_part/templates/movie.html
+++ b/Web_part/templates/movie.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- external css -->
-    <link rel="stylesheet" href='/static/sstyle.css' />
+    <link rel="stylesheet" href='/static/style.css' />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 
@@ -49,12 +49,12 @@
 
         <div class="nav">
 
-            <a href="{{ url_for('test')}}" class="nav_link nav_active">
-                <i class="bx bx-home"></i>
-                <span class="nav_link_title">Home</span>
+            <a href="{{ url_for('test')}}" class="nav_link">
+                <i class="bx bx-search"></i>
+                <span class="nav_link_title">Search</span>
             </a>
 
-            <a href="#Movie" class="nav_link">
+            <a href="#Movie" class="nav_link nav_active">
                 <i class="bx bx-movie"></i>
                 <span class="nav_link_title">About Movie</span>
             </a>
@@ -344,7 +344,7 @@
 
          <!-- Add Js  Bootstrap-->
 
-         <script src="/static/scripts.js" async defer></script>
+         <script src="/static/s1.js" async defer></script>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
