--- a/Web_part/static/style.css
+++ b/Web_part/static/style.css
@@ -1,5 +1,6 @@
   @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
   @import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800");
+  @import url('https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&family=Calligraffitti&display=swap');
 
 
   /* ----------------#### Global Declarations ####-----------------------  */
@@ -37,12 +38,32 @@
   body {
 
 
-    background: rgb(176, 176, 204);
-    min-height: 100vh;
+    background: linear-gradient(-45deg, #ee7752, #d6b11b, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 8s ease infinite;
+    /* height: 100vh; */
+
+    color: auto;
 
     overflow-x: hidden;
 
 
+  }
+
+
+
+  @keyframes gradient {
+    0% {
+      background-position: 0% 50%;
+    }
+
+    50% {
+      background-position: 100% 50%;
+    }
+
+    100% {
+      background-position: 0% 50%;
+    }
   }
 
 
@@ -59,7 +80,7 @@
 
 
   .section_padding {
-    padding: 10px 80px;
+    padding: 30px 80px;
   }
 
   .container {
@@ -96,13 +117,20 @@
 
   /*? ------------------- Adjustments -e -------------------- */
 
+
+
+
+
+
+
   /*? ------------------- Section Title -s -------------------- */
 
   .section_title {
     /* margin: 40px; */
     margin-bottom: 20px;
     z-index: 1;
-    background-color: #aeaeae;
+    padding-left: 20px;
+    /* background-color: #aeaeae; */
   }
 
   .section_title .main_title {
@@ -164,6 +192,8 @@
 
   }
 
+
+
   .nav_link .bx {
     font-size: 1.7rem;
   }
@@ -192,18 +222,22 @@
     position: relative;
     z-index: 1;
     overflow-x: hidden;
-    padding-top: 80px;
+    padding-top: 70px;
+    padding-bottom: 150px;
+    overflow-y: hidden;
+
   }
 
+
   .home .container {
-    background-color: #25c6c4;
-    padding: 10px;
+    /* background-color: #c6b625; */
+    /* padding: 10px; */
     /* min-height: 80vh; */
   }
 
   .home .row {
-    margin-top: 50px;
-    background-color: rgb(93, 0, 255);
+    /* margin-top: 10px; */
+    /* background-color: rgb(254, 253, 254); */
     justify-content: center;
     text-align: center;
   }
@@ -214,69 +248,123 @@
 
   .home_txt {
     /* background-color: red; */
-    line-height: 25px;
+    line-height: 45px;
+
+  }
+
+  .home_txt h3 {
+    font-size: 1.2rem;
+    font-weight: 900;
+
   }
 
 
 
 
   .home_txt .greetings {
-    font-size: 30px;
-    font-weight: 600;
-    letter-spacing: 0px;
-    margin-bottom: 10px;
-    color: var(--main-color);
-    /* font-size: 2vw; */
-    text-shadow: 2px 2px 2 px #3F7FBF;
-    /* mix-blend-mode: screen; */
-    /* animation: fadeIn 1.5s linear forwards; */
+    /* position: absolute; */
 
+
+
+
+    font-family: 'Calligraffitti', cursive;
+    font-weight: 700;
+    font-size: 2rem;
+    /* position: absolute; */
+    text-shadow: -1px 5px 20px #ced0d3;
+
+    /* transform: translate(-50%,-50%); */
+    letter-spacing: 0.02em;
+    text-align: center;
+
+    color: #F9f1cc;
+    text-shadow: 1px 1px 0px #FFB650,
+      2px 2px 0px #FFD662,
+      4px 4px 0px #FF80BF,
+      5px 5px 0px #EF5097,
+      8px 8px 0px #6868AC,
+      10px 10px 0px #90B1E0;
+
+
+  }
+
+  .home_txt .moving_txt {
+
+
+    padding: 10px;
     /* display: inline-block; */
-
+    font-weight: 600;
+    margin: 10px;
+    transition: all 0.5s ease-in-out;
   }
 
-/*  
-  .moving_txt {
-    color: black;
-    font-size: 17px;
-    margin-top: 10px;
-    background-color: #03a9f4;
 
-} */
+  .typed-cursor {
 
-.home .home_txt span {
-    
-  /* background-color: red; */
-    margin-top: 110px;
-    display: inline;
-    color: black;
-  
-}
-
-  .home_txt .name {
-
-    margin-top: 15px;
-    margin-bottom: 15px;
-
-
-    font-size: 35px;
-    text-shadow: 2px 4px 2px #3F7FBF;
-    /* mix-blend-mode: screen; */
-
+    display: none;
+    opacity: 0;
   }
 
+
+
+  /* -------------------------- */
+
+
+
+
+
+  .title {}
+
+  .title h1 {
+    color: #fff;
+    font-size: 3rem;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-family: "Josefin Sans", sans-serif;
+    background: linear-gradient(to right, #ffffff 10%, #25e2e8 50%, #10141f 60%);
+
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    color: #fff;
+    background-clip: text;
+    text-fill-color: fill;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 5s linear infinite;
+    /* display: inline-block; */
+  }
+
+  @keyframes textclip {
+    to {
+      background-position: 200% center;
+    }
+  }
+
+
+
+
+
+  /* -------------------------- */
+  #text {
+    /* position: absolute; */
+
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+
+  }
 
   .home_txt p {
+
     font-size: 16px;
-    /* color: var(--black-900); */
     font-weight: 500;
-    margin: 15px 0;
+    /* position: absolute; */
 
   }
 
 
   .home_txt .srch_bar {
 
+    position: absolute;
 
     background-color: #921313;
     padding: 50px;
@@ -286,117 +374,105 @@
 
   }
 
+  /* ------------------ */
+
+
+
+
   /*? ------------ search Bar ------------------ */
 
+  #search-form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 10px;
+    padding: 10px;
+    border-radius: 20px;
+    border: none;
+    width: 390px;
+    font-size: 15px;
+    text-align: left;
+    background-color: #ffffff;
+    box-shadow: 0px 12px 16px rgba(0, 0, 0, 0.5);
 
- 
+    transition: all 0.3s ease-in-out;
+  }
+
+
+  #search-input {
+    flex: 1;
+    border: none;
+    outline: none;
+    transition: all 0.3s ease-in-out;
+
+  }
+
+  #search-input:focus {
+    border: 1px solid #007bff;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: rgba(244, 235, 235, 0.412);
+    /* outline: none; */
+    transition: all 0.3s ease-in-out;
+
+  }
+
+  #search-button {
+    margin-left: 10px;
+    padding: 10px 15px;
+    border-radius: 50px;
+    border: none;
+    background-color: #007bff;
+    color: #ffffff;
+    font-size: 15px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+  }
+
+  #search-button:hover {
+    background-color: #0554a9;
+  }
+
+
+
+
+
+
 
   /* ?------------ search Bar ------------------ */
 
 
-  .home .rimg {
+
+
+
+
+
+
+
+  /* ---------------- auto complete -------------- */
+  .ui-autocomplete {
     position: absolute;
-    z-index: 1;
-    transition: transform 0.2s ease-out;
-
-
-
+    top: 10px;
+    left: 110px;
+    z-index: -1;
+    border-radius: 10px;
+    max-height: 200px;
+    overflow-y: auto;
+    font-size: 14px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 15px;
   }
 
-  .home .backg img {
-    filter: blur(5px);
-    width: 100%;
+  .ui-autocomplete li {
+    border-radius: 10px;
+    list-style-type: none;
+    padding: 5px;
+    cursor: pointer;
+    outline: none;
   }
 
-  .home img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    pointer-events: none;
-  }
-
-  #m1 {
-    width: 100px;
-    height: 100px;
-    top: 150px;
-    left: 50px;
-
-    animation: wave_hand 2s ease-in-out infinite;
-
-    transform-origin: 90% 90%;
-  }
-
-  #m2 {
-
-    width: 100px;
-    height: 100px;
-    top: 400px;
-    left: 400px;
-
-  }
-
-  #m3 {
-    width: 100px;
-    height: 100px;
-    top: 300px;
-    left: 700px;
-
-  }
-
-  #m5 {
-    width: 100px;
-    height: 100px;
-    top: 400px;
-    left: 30px;
-
-
-
-  }
-
-  #m6 {
-
-    width: 100px;
-    height: 100px;
-    top: 400px;
-    left: 950px;
-
-    animation: wave_hand 2s ease-in-out infinite;
-
-    transform-origin: 50% 90%;
-
-  }
-
-  #m7 {
-
-    width: 100px;
-    height: 100px;
-    top: 150px;
-    left: 900px;
-
-    animation: wave_hand 4s ease-in-out infinite;
-
-    transform-origin: 10% 10%;
-
-
-  }
-
-  #m8 {
-
-    width: 200px;
-    height: 300px;
-    top: 110px;
-    left: 100px;
-    /* -webkit-transform: scaleX(-1);
-    transform: scaleX(-1); */
-
-
-  }
-
-
-  /* ----------------srch bar-------------- */
-
-  /* ----------------srch bar-------------- */
+  /* ---------------- auto-complete ------------- */
 
 
 
@@ -499,10 +575,9 @@
     border-radius: 5px;
     border: 1px solid rgba(255, 255, 255, 0.13);
   }
-  
-  .movie_card .info_section .movie_header .mv_rating
-  {
-     font-size: 15px;
+
+  .movie_card .info_section .movie_header .mv_rating {
+    font-size: 15px;
   }
 
   .movie_card .info_section .movie_header .type {
@@ -531,9 +606,8 @@
     color: #cfd6e1;
     font-size: 14px;
   }
-  
-  .movie_card .info_section .know_more
-  {
+
+  .movie_card .info_section .know_more {
     /* background-color: #03a9f4; */
     padding: 10px;
     font-size: 14px;
@@ -543,12 +617,11 @@
     transition: all 0.4s;
   }
 
-  .movie_card .info_section .know_more a
-  {
+  .movie_card .info_section .know_more a {
     color: white;
   }
-  .movie_card .info_section .know_more  a:hover
-  {
+
+  .movie_card .info_section .know_more a:hover {
     transform: scale(1.1);
     color: red;
   }
@@ -586,7 +659,7 @@
   @media screen and (max-width: 768px) {
     .movie_card {
       width: 95%;
-      margin: 70px auto;
+      margin: 10px auto;
       min-height: 350px;
       height: auto;
     }
@@ -619,7 +692,10 @@
     box-shadow: 0px 0px 120px -55px rgba(255, 51, 0, 0.5);
   }
 
-  
+  .poster_back {
+    background: url("https://occ-0-2433-448.1.nflxso.net/art/cd5c9/3e192edf2027c536e25bb5d3b6ac93ced77cd5c9.jpg");
+    background-repeat: no-repeat;
+  }
 
 
 
@@ -640,7 +716,7 @@
 
   .recmndr {
     position: relative;
-    background-color: #c6c325;
+    /* background-color: #c6c325; */
     z-index: 1;
     min-height: 100vh;
 
@@ -652,30 +728,36 @@
     justify-content: center;
     align-items: center;
     /* min-height: 100vh; */
-    background-color: blue;
+    /* background-color: blue; */
     z-index: 11;
     gap: 15px;
   }
 
   /* ------------------ */
 
-  .carda {
+  .rec_card {
     position: relative;
     width: 250px;
-    height: 300px;
+    height: 280px;
     overflow: hidden;
 
     background-color: white;
     border-radius: 20px;
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
+
+
+    transform: scale(0.1);
+    transition: all .5s ease;
   }
 
-  .carda .poster {
+  
+
+  .rec_card .poster {
     position: relative;
     overflow: hidden;
   }
 
-  .carda .poster::before {
+  .rec_card .poster::before {
     content: '';
     position: absolute;
     bottom: -130px;
@@ -686,14 +768,14 @@
     z-index: 1;
   }
 
-  .carda:hover .poster::before {
+  .rec_card:hover .poster::before {
     bottom: 0px;
   }
 
 
-  .carda .poster img {
+  .rec_card .poster img {
     width: 100%;
-    height: 300px;
+    height: 280px;
 
     /* height: 100%; */
     /* border-radius: 20px 20px 0 0; */
@@ -701,14 +783,14 @@
     transition: 0.5s;
   }
 
-  .carda:hover .poster img {
+  .rec_card:hover .poster img {
     transform: translateY(-50px);
     filter: blur(5px);
   }
 
   .details {
     position: absolute;
-    bottom: -85px;
+    bottom: -95px;
     left: 0;
     width: 100%;
     padding: 20px;
@@ -719,7 +801,7 @@
     transition: 0.5s;
   }
 
-  .carda:hover .details {
+  .rec_card:hover .details {
     bottom: 40px;
   }
 
@@ -738,12 +820,14 @@
   .details .rating {
     font-size: 14px;
     color: yellow;
+    margin-bottom: 5px;
   }
 
   .details .tags {
     font-size: 10px;
     position: relative;
     margin-top: 5px;
+    margin-bottom: 10px;
   }
 
   .details .tags span {
@@ -757,9 +841,10 @@
     background-color: red;
   }
 
-  .details .info {
-    color: #fff;
-    margin-top: 10px;
+  .details .extra_info {
+    margin-top: 15px;
+
+    /* background-color: #0062cc; */
 
   }
 
@@ -780,7 +865,8 @@
 
   .about {
     position: relative;
-    /* background-color: #c625a6; */
+    background-color: #686f7c;
+
     z-index: 1;
     /* min-height: 100vh; */
     /* background-color: rgb(186, 75, 75); */
@@ -788,32 +874,56 @@
 
 
   .about .row {
-    background-color: #03a9f4;
-    margin-bottom: 60px;
+    /* background-color: #03a9f4; */
+    margin-bottom: 40px;
 
   }
 
 
   .about_box {
-    background-color: grey;
+    /* background-color: grey; */
     padding: 10px;
     margin: 10px;
     margin-bottom: 30px;
     font-size: 12px;
   }
 
+  .about_box p {
+    font-weight: 600;
+    color: white;
+  }
+
+  .about_box span {
+    font-weight: 900;
+    color: #000000;
+  }
+
+  .gradient_design {
+    /* background-color: blueviolet; */
+    margin: 20px;
+    border-radius: 10px;
+
+    background-image: linear-gradient(109.6deg, rgba(156, 252, 248, 1) 11.2%, rgba(110, 123, 251, 1) 91.1%);
+
+
+
+  }
 
   .about_us {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: #921313;
+    /* background-color: #921313; */
+
+
   }
 
 
   .about_us_title {
-    background-color: green;
+    /* background-color: green; */
+    justify-content: center;
+    text-align: center;
 
     /* display: flex; */
     /* margin-bottom: 10px; */
@@ -828,6 +938,7 @@
     margin-inline-end: 0px;
     font-weight: bold;
   }
+
 
 
 
@@ -857,6 +968,8 @@
     justify-content: center;
     align-items: center;
     position: relative;
+
+
   }
 
   .border {
@@ -969,7 +1082,22 @@
 
   /* -----------------AboutUS  Cards ------------------------ */
 
+  .about .git_link a {
+    color: white;
+    font-size: 25px;
+    transition: all 0.3s ease-in-out;
+  }
 
+  .about .git_link a:hover {
+    color: yellow;
+    font-size: 25px;
+  }
+
+  .about .git_link a:active {
+    color: rgb(98, 99, 126);
+    font-size: 25px;
+    transform: scale(0.3);
+  }
 
 
 
@@ -988,6 +1116,107 @@
 
 
   /*! ----------------------- An1:Animations ------------------------------------------ */
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
+
+
+  @keyframes jiggle {
+    0% {
+      border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+
+    50% {
+      border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+    }
+
+    100% {
+      border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+    }
+  }
+
+  @keyframes btn_bouncy {
+    0% {
+      top: 0em;
+    }
+
+    40% {
+      top: 0em;
+    }
+
+    43% {
+      top: -0.7em;
+    }
+
+    46% {
+      top: 0em;
+    }
+
+    48% {
+      top: -0.4em;
+    }
+
+    50% {
+      top: 0em;
+    }
+
+    100% {
+      top: 0em;
+    }
+  }
+
+
+  @keyframes glowing {
+    0% {
+
+      box-shadow:
+        0 0 18px #03e9f4,
+        0 0 18px #03e9f4,
+        0 0 18px #03e9f4;
+
+    }
+
+    50% {
+
+      box-shadow:
+        0 0 18px #54c4ca,
+        0 0 18px #09747a,
+        0 0 18px #07383a;
+    }
+
+    100% {
+
+      box-shadow:
+        0 0 18px #03e9f4,
+        0 0 18px #03e9f4,
+        0 0 18px #03e9f4;
+    }
+  }
+
+  @keyframes hover_anim {
+    0% {
+      box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+      transform: translatey(0px);
+    }
+
+    50% {
+      box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+      transform: translatey(-20px);
+    }
+
+    100% {
+      box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+      transform: translatey(0px);
+    }
+  }
+
+
 
 
   @keyframes wave_hand {
@@ -1044,6 +1273,26 @@
     opacity: 1;
     transform: scale(1);
   }
+
+
+  .ani1 {
+    opacity: 0;
+    transform: translateY(100px);
+    transition: all 1s ease-in-out;
+  }
+
+  .ani2 {
+    opacity: 0;
+    transform: translateX(100px);
+    transition: all 1s ease-in-out;
+  }
+
+  .ani3 {
+    opacity: 0;
+    transform: translateY(-100px);
+    transition: all 1s ease-in-out;
+  }
+
 
   /*! ----------------------- An1:Animations ------------------------------------------ */
 
@@ -1135,6 +1384,7 @@
   /*! --------------------------Re1: Responsive ------------------------- */
 
   @media (max-width: 900px) {
+
     .nav {
       bottom: 0;
       left: 0;
@@ -1168,9 +1418,13 @@
     .section_padding {
       padding: 40px 30px;
     }
+
   }
 
+
+
   @media (max-width: 425px) {
+
 
     .cardx {
       flex: 0 0 80%;
@@ -1178,14 +1432,44 @@
       width: 300px;
     }
 
+    #search-form {
+
+      margin: 10px 10px;
+      padding: 10px;
+      border-radius: 20px;
+      border: none;
+      width: 350px;
+      font-size: 15px;
+
+    }
   }
 
   @media (max-width: 500px) {
 
+
     .section_padding {
-      padding: 40px 10px;
+      padding: 120px 10px;
     }
 
+
+    .title h1 {
+      color: #fff;
+      font-size: 2.5rem;
+      /* text-transform: uppercase; */
+      font-weight: 900;
+      background: linear-gradient(to right, #ffffff 10%, #256ce8 50%, #10141f 60%);
+      background-size: auto auto;
+      background-clip: border-box;
+      background-size: 200% auto;
+
+
+      background-clip: text;
+      text-fill-color: fill;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: textclip 5s linear infinite;
+      /* display: inline-block; */
+    }
 
 
   }
@@ -1193,15 +1477,14 @@
 
   /*!-----------------preloader------------------ */
 
-  #preloader
-  {
-    background: #000 url("imgs/pre.gif") no-repeat center;
+  #preloader {
+    background: #000 url("imgs/pre2.gif") no-repeat center;
     /* border-radius: 10px; */
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-size: 20%;
+    background-size: 100%;
     padding: 30px;
     height: 100vh;
     width: 100%;
@@ -1209,5 +1492,32 @@
     z-index: 1000;
   }
 
-  
+  /* -------------------------- */
 
+
+
+  /* ?---------------  Scroll Bar -s    ------------------- */
+
+  ::-webkit-scrollbar {
+    width: 0.8rem;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: rgba(0, 212, 255, 1);
+
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(26, 17, 1);
+    border-radius: 0.6rem;
+    border: 0.2rem solid transparent;
+    background-clip: content-box;
+
+  }
+
+  ::-webkit-scrollbar-track:hover {
+    background-color: var(--black-400);
+  }
+
+
+  /*? ---------------- Scroll Bar -e------------------- */
