--- a/Web_part/templates/home.html
+++ b/Web_part/templates/home.html
@@ -170,6 +170,12 @@
                         through a web interface.
                         The user can input their preferences and receive recommendations based on their input.
                     </p>
+                    <div class="git_link">
+                        <h4>View the Source code of this Project :
+                            <a href="https://github.com/Raj-Gurjar/Movie-Recommender.git" target="_blank"><i
+                                    class="fa fa-github-square"></i></a>
+                        </h4>
+                    </div>
                 </div>
 
 
@@ -232,52 +238,6 @@
 
             </div>
 
-
-
-
-
-
-
-
-            <!-- --------------------- -->
-
-            <!-- <div class="row justify_content_end">
-                <div class="about_us">
-                    <h3 class="abtUs_title">Meet The Creators</h3>
-                    <div class="abtUs_card">
-                        <div class="container3">
-                            <div class="cardx card0">
-                                <div class="border">
-                                    <h3>Raj Chhalotre</h3>
-                                    <h4>Frontend</h4>
-                                    <p>
-                                        Front End | AI | ML | C++
-                                    </p>
-                                    <div class="icons">
-                                        <a href="www.google.com"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                                        <a href=""><i class="fa fa-github" aria-hidden="true"></i></a>
-                                        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="cardx card1">
-                                <div class="border">
-                                    <h3>Hemant Rajput</h3>
-                                    <h4>Data Science</h4>
-                                    <p>
-                                        Front End | AI | ML | C++
-                                    </p>
-                                    <div class="icons">
-                                        <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                                        <a href=""><i class="fa fa-github" aria-hidden="true"></i></a>
-                                        <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
         </div>
 
 
