--- a/Web_part/templates/movie.html
+++ b/Web_part/templates/movie.html
@@ -280,7 +280,14 @@
                     through a web interface.
                     The user can input their preferences and receive recommendations based on their input.
                 </p>
+                <div class="git_link">
+                    <h4>View the Source code of this Project :
+                        <a href="https://github.com/Raj-Gurjar/Movie-Recommender.git" target="_blank"><i
+                                class="fa fa-github-square"></i></a>
+                    </h4>
+                </div>
             </div>
+            
 
 
             <div class="gradient_design">
