--- a/Web_part/templates/home.html
+++ b/Web_part/templates/home.html
@@ -9,22 +9,16 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-    <!-- font boxicons -->
+    
+    <!-- Add font boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- Add font awasome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- external css -->
+    <!-- Add external css -->
     <link rel="stylesheet" href='/static/style.css' />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
 
     <!-- ------- auto complete search bar ------ -->
@@ -33,24 +27,14 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
 
 </head>
-<style>
-    
-.poster_back {
-  background: url("{{mp}}");
-  background-repeat: no-repeat;
-}
 
-</style>
 <body>
-    <div id="preloader">
-
-
-    </div>
+    <div id="preloader"></div>
 
 
     <navbar>
 
-        <div class="nav">
+        <div class="nav" style="margin-left: 10px;">
 
             <a href="#Home" class="nav_link nav_active">
                 <i class="bx bx-home"></i>
@@ -74,13 +58,8 @@
 
 
     <section class="home section_padding" id="Home">
-        <!-- <div class="bg_img">
-            <img src="/Parallax/imgs/bg2.jpg" alt="">
-         </div> -->
+     
         <div class="container">
-
-
-
 
 
             <div class="row">
@@ -200,9 +179,9 @@
                                     Front End | AI | ML | C++
                                 </p>
                                 <div class="icons">
-                                    <a href="www.google.com"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                                    <a href=""><i class="fa fa-github" aria-hidden="true"></i></a>
-                                    <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                    <a href="https://www.linkedin.com/in/raj-chhalotre-29jul01/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                    <a href="https://github.com/Raj-Gurjar" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                    <a href="" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -219,9 +198,9 @@
                                     Front End | AI | ML | C++
                                 </p>
                                 <div class="icons">
-                                    <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                                    <a href=""><i class="fa fa-github" aria-hidden="true"></i></a>
-                                    <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                                    <a href="https://www.linkedin.com/in/hemantsinghrajput/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                                    <a href="https://github.com/hemantsinghrajput" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                                    <a href="" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -262,10 +241,12 @@
 
 
 
-    <!-- Add Js  Bootstrap-->
-
+    <!--!------ Add Js ------>
+     
+    <!-- external js -->
     <script src="/static/script.js" async defer></script>
-
+    
+    <!-- Shifting Text -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
 
