--- a/Web_part/templates/movie.html
+++ b/Web_part/templates/movie.html
@@ -123,7 +123,7 @@
                         </div>
 
                         <div class="know_more">
-                            <a href="{{homep}}" class="" target="_blank"> <i class=" fa fa-link"></i> Know More</a>
+                            <a href="{{homep}}" class="" target="_blank"> Know More...</a>
                         </div>
                     </div>
                     <div class="blur_back poster_back"></div>
@@ -201,7 +201,7 @@
 
                                 <div class="rating">
                                     <!-- <i class = "fa fa-star"></i> -->
-                                    <h4>Rating : {{rating[loop.index0][0]}}/10</h4>
+                                    <h4> <i class="fa fa-star"></i> {{rating[loop.index0][0]}}/10</h4>
 
                                 </div>
 
