--- a/Web_part/templates/movie.html
+++ b/Web_part/templates/movie.html
@@ -104,7 +104,10 @@
                             <h4>Director : {{crew}}</h4>
                             <h5>Cast :{{cast}}</h5>
 
-                            <span class="minutes"><i class="fa fa-clock-o"></i> {{rt}}</span>
+                            <span class="year minutes"><i class="fa fa-calendar"></i> 1990</span>
+
+                            <span class="minutes"><i class="fa fa-clock-o"></i> {{rev}}</span>
+                           
 
                             <span class="rating minutes"> <i class="fa fa-star"></i> {{vote}}/10</span>
 
@@ -345,7 +348,7 @@
 
             </div>
 
-            <!-- Add Js  Bootstrap-->
+            <!-- Add Js -->
 
             <script src="/static/script.js" async defer></script>
 
