--- a/Web_part/templates/movie.html
+++ b/Web_part/templates/movie.html
@@ -104,11 +104,12 @@
                             <h4>Director : {{crew}}</h4>
                             <h5>Cast :{{cast}}</h5>
 
-                            <span class="minutes"><i class="fa fa-clock-o"></i> {{rt}}</span>
+                            <span class="year minutes"><i class="fa fa-calendar"></i> {{raj[0]}}</span>
+                            <span class="minutes"><i class="fa fa-clock-o"></i> {{rev}}</span>
 
                             <span class="rating minutes"> <i class="fa fa-star"></i> {{vote}}/10</span>
 
-                            <p class="genre"><i class="fa fa-address-book"></i>{{gen}}</p>
+                            <p class="genre"><i class="fa fa-address-book"></i> {{gen}}</p>
 
 
 
@@ -167,7 +168,7 @@
 
             <div class="section_title">
                 <h3 class="main_title">Recommendations</h3>
-                <h5 class="sub_title">Here are some Recommendations related to <span>{{cur_m}}</span></h5>
+                <h5 class="sub_title">Here are some Recommendations related to <span> {{cur_m}}</span></h5>
 
             </div>
 
@@ -345,7 +346,7 @@
 
             </div>
 
-            <!-- Add Js -->
+            <!-- Add Js  Bootstrap-->
 
             <script src="/static/script.js" async defer></script>
 
